Fixed flex wrap for  class .about-content--three_large in iPhone

--- a/public/CSS/menu.css
+++ b/public/CSS/menu.css
@@ -435,7 +435,7 @@ margin-bottom:15%;
   flex-basis: 100%;
   display: flex;
   flex-direction: column;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
 }
 
 .about-content--four {
